deps/v8/test/message/fail/modules-cycle5.out
*%(basename)s:8: SyntaxError: Detected cycle while resolving name 'foo' in 'modules-cycle5.js'
export {foo} from "modules-cycle5.js";
        ^^^
SyntaxError: Detected cycle while resolving name 'foo' in 'modules-cycle5.js'

